@@ -925,7 +925,7 @@ class Blade implements CompilerInterface
 	 */
 	protected function compileSelectfilter($expression)
 	{
-		$expression = trim($expression, '()');
+		$expression = trim(substr($expression, 1, -1));
 		$parts      = explode(',', $expression);
 
 		$localField  = $parts[0];
@@ -935,7 +935,6 @@ class Blade implements CompilerInterface
 			'fof.autosubmit' => true,
 			'none'           => $placeholder,
 		], true);
-
 
 		return "<?php echo \FOF30\Utils\FEFHelper\BrowseView::genericSelect($localField, $optionsSpec, \$this->getModel()->getState($localField), $params) ?>";
 	}
